--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.66.0",
     "react-konva": "^19.2.0",
     "three": "^0.181.1",
+    "use-image": "^1.1.4",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
