--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@react-three/drei": "^10.7.6",
     "@react-three/fiber": "^9.4.0",
+    "@swc/helpers": "^0.5.17",
     "@tanstack/react-query": "^5.90.8",
     "@uppy/core": "^5.1.1",
     "@uppy/dashboard": "^5.0.4",
